--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,6 @@
 ## Resolved Issues ##
 
-- **[1]** Make all the skeletons for the game states, tigress, cubs, and poacher.
 
 ## Open Issues ##
+- **[1]** Make all the skeletons for the game states, tigress, cubs, and poacher.
+- **[2]** Add sprites.
