--- a/issues.mkd
+++ b/issues.mkd
@@ -3,9 +3,10 @@
 - **[2]** Add sprites.
 - **[4]** Remake the tigress sprites and add all the sides of her.
 - **[3]** Flesh out the skeletons for the entities and states.
+- **[8]** Make the tigress collision with the cub working.
 
 ## Open Issues ##
 - **[5]** Remake the cub sprite.
 - **[6]** Make the poacher sprite.
 - **[7]** Make the map layout.
-- **[8]** Make the tigress collision with the cub working.
+- **[9]** Make collisions with poacher working.
