--- a/issues.mkd
+++ b/issues.mkd
@@ -5,9 +5,9 @@
 - **[3]** Flesh out the skeletons for the entities and states.
 - **[8]** Make the tigress collision with the cub working.
 - **[9]** Make collisions with poacher working.
+- **[10]** Make base class for Underbrush.
 
 ## Open Issues ##
 - **[5]** Remake the cub sprite.
 - **[6]** Make the poacher sprite.
 - **[7]** Make the map layout.
-- **[10]** Make the underbrush class.
