--- a/issues.mkd
+++ b/issues.mkd
@@ -14,3 +14,4 @@
 - **[5]** Remake the cub sprite.
 - **[6]** Make the poacher sprite.
 - **[7]** Make the map layout.
+- **[14]** Debug poacher's pathfinding crashing when vertices aren't quite set.
