--- a/issues.mkd
+++ b/issues.mkd
@@ -10,9 +10,11 @@
 - **[12]** Make cubs wander around.
 - **[13]** Fix poacher pathfinding after tigress moves.
 - **[14]** Debug poacher's pathfinding crashing when vertices aren't quite set.
+- **[15]** Make the nest functional.
+- **[16]** Add different level layouts and begin images.
 
 ## Open Issues ##
 - **[5]** Remake the cub sprite.
 - **[6]** Make the poacher sprite.
 - **[7]** Make the map layout.
-- **[15]** Make the nest functional.
+- **[17]** Make startup screen images and game won/game over.
